RESOLVED FIXED22262
Clicking close ("X") button in docked Web Inspector clears Web Inspector but doesn't close it
https://bugs.webkit.org/show_bug.cgi?id=22262
Summary Clicking close ("X") button in docked Web Inspector clears Web Inspector but ...
Adam Roben (:aroben)
Reported 2008-11-14 07:45:05 PST
To reproduce: 1. Go to any page (e.g., <http://webkit.org/>) 2. Open the Inspector 3. Dock the Inspector into the WebView 4. Click the close ("X") button in the upper-left of the Inspector The Inspector's contents get cleared (i.e., the DOM tree disappears), but the Inspector doesn't close. Note that bug 14270 introduced the close button in order to give a way to close the docked Inspector, but clearly not everything needed for that bug fix is implemented yet on Windows.
Attachments
Patch + ChangeLog (8.92 KB, patch)
2009-01-06 17:38 PST, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2008-11-14 07:45:39 PST
Adam Roben (:aroben)
Comment 2 2009-01-06 17:38:46 PST
Created attachment 26482 [details] Patch + ChangeLog
Darin Adler
Comment 3 2009-01-06 21:53:15 PST
Comment on attachment 26482 [details] Patch + ChangeLog r=me Hard for me to swallow those C style casts thought.
Adam Roben (:aroben)
Comment 4 2009-01-07 07:40:53 PST
(In reply to comment #3) > (From update of attachment 26482 [details] [review]) > r=me > > Hard for me to swallow those C style casts thought. OK, I'll change them to reinterpret_casts (and simplify them a bit) before landing. Thanks for the review!
Adam Roben (:aroben)
Comment 5 2009-01-07 07:58:41 PST
Note You need to log in before you can comment on or make changes to this bug.