        Fix Bug 22262: Clicking close ("X") button in docked Web Inspector clears Web Inspector but doesn't close it

<https://bugs.webkit.org/show_bug.cgi?id=22262>
        <rdar://problem/6371873>

        Reviewed by Darin Adler.

        * WebCoreSupport/WebInspectorClient.cpp:
        (WebInspectorClient::WebInspectorClient): Initialize new member.
        (WebInspectorClient::showWindow): Moved code from here to
        showWindowWithoutNotifications.
        (WebInspectorClient::closeWindow): Moved code from here to
        closeWindowWithoutNotifications.

        (WebInspectorClient::attachWindow):
        (WebInspectorClient::detachWindow):
        Record whether or not we should be attached, then close and reopen the
        window without notifying the InspectorController. Code that was in
        these functions moved to showWindowWithoutNotifications and
        closeWindowWithoutNotifications, respectively.

        (WebInspectorClient::closeWindowWithoutNotifications): Added. Code
        came from closeWindow and detachWindow.
        (WebInspectorClient::showWindowWithoutNotifications): Added. Code came
        from showWindow and attachWindow.

        * WebCoreSupport/WebInspectorClient.h: Added
        {close,show}WindowWithoutNotifications and m_shouldAttachWhenShown.

Canonical link: https://commits.webkit.org/31881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39682 268f45cc-cd09-0410-ab3c-d52691b4dbfc