WebKit/win/WebCoreSupport/WebInspectorClient.h
@@ -71,6 +71,9 @@ public:
 private:
     ~WebInspectorClient();
 
+    void closeWindowWithoutNotifications();
+    void showWindowWithoutNotifications();
+
     void updateWindowTitle();
 
     LRESULT onGetMinMaxInfo(WPARAM, LPARAM);
@@ -88,6 +91,7 @@ private:
     COMPtr<WebView> m_webView;
     HWND m_webViewHwnd;
 
+    bool m_shouldAttachWhenShown;
     bool m_attached;
 
     OwnPtr<WebNodeHighlight> m_highlight;
